[gd_scene load_steps=3 format=3 uid="uid://b0me2xgnmxsm3"]

[ext_resource type="Script" path="res://scripts/quiz_page.gd" id="1_vf68h"]
[ext_resource type="FontFile" uid="uid://ck8u3nw8637l2" path="res://fonts/quiz_page_font/LibreBaskerville-Bold.ttf" id="2_nlyta"]

[node name="quiz_page" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = 2.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vf68h")

[node name="question_container" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.497
anchor_top = 0.275
anchor_right = 0.497
anchor_bottom = 0.275
offset_left = -286.023
offset_top = -32.65
offset_right = 287.977
offset_bottom = 51.35
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="question_label" type="RichTextLabel" parent="question_container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_nlyta")
theme_override_font_sizes/normal_font_size = 22
bbcode_enabled = true

[node name="options_container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -51.0
offset_right = 166.0
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
metadata/_edit_group_ = true
metadata/_edit_use_anchors_ = true

[node name="option_button1" type="Button" parent="options_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nlyta")
theme_override_font_sizes/font_size = 19
icon_alignment = 1
expand_icon = true

[node name="option_button2" type="Button" parent="options_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nlyta")
theme_override_font_sizes/font_size = 19
expand_icon = true

[node name="option_button3" type="Button" parent="options_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nlyta")
theme_override_font_sizes/font_size = 19
expand_icon = true

[node name="option_button4" type="Button" parent="options_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nlyta")
theme_override_font_sizes/font_size = 19
expand_icon = true

[connection signal="pressed" from="options_container/option_button1" to="." method="_on_option_button_1_pressed"]
[connection signal="pressed" from="options_container/option_button2" to="." method="_on_option_button_2_pressed"]
[connection signal="pressed" from="options_container/option_button3" to="." method="_on_option_button_3_pressed"]
[connection signal="pressed" from="options_container/option_button4" to="." method="_on_option_button_4_pressed"]
